kubernetes/exam/datascientest-chart/my-deployment-eval.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    meta.helm.sh/release-name: user-api-dev
    meta.helm.sh/release-namespace: dev
  creationTimestamp: "2025-07-08T16:21:37Z"
  generation: 2
  labels:
    app.kubernetes.io/instance: user-api-dev
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: datascientest-chart
    app.kubernetes.io/version: 1.16.0
    helm.sh/chart: datascientest-chart-0.1.0
  name: user-api-dev-datascientest-chart
  namespace: dev
  resourceVersion: "50924"
  uid: feb015bc-c4c0-47a1-9ce7-073e744d3d94
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: user-api-dev
      app.kubernetes.io/name: datascientest-chart
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: user-api-dev
        app.kubernetes.io/name: datascientest-chart
    spec:
      containers:
      - env:
        - name: MYSQL_ROOT_PASSWORD
          valueFrom:
            secretKeyRef:
              key: mysql-password
              name: user-api-dev-datascientest-chart-db
        - name: MYSQL_DATABASE
          value: Main
        image: datascientest/mysql-k8s:1.0.0
        imagePullPolicy: IfNotPresent
        name: mysql
        ports:
        - containerPort: 3306
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      - env:
        - name: MYSQL_HOST
          value: localhost
        - name: MYSQL_USER
          value: root
        - name: MYSQL_PASSWORD
          valueFrom:
            secretKeyRef:
              key: mysql-password
              name: user-api-dev-datascientest-chart-db
        - name: MYSQL_DATABASE
          value: Main
        image: YOUR_DOCKERHUB_USERNAME/fastapi-app:1.0.0
        imagePullPolicy: IfNotPresent
        name: fastapi
        ports:
        - containerPort: 8000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: user-api-dev-datascientest-chart
      serviceAccountName: user-api-dev-datascientest-chart
      terminationGracePeriodSeconds: 30
status:
  conditions:
  - lastTransitionTime: "2025-07-08T16:21:37Z"
    lastUpdateTime: "2025-07-08T16:21:37Z"
    message: Deployment does not have minimum availability.
    reason: MinimumReplicasUnavailable
    status: "False"
    type: Available
  - lastTransitionTime: "2025-07-08T16:21:37Z"
    lastUpdateTime: "2025-07-08T16:21:37Z"
    message: 'pods "user-api-dev-datascientest-chart-7b6d47f66b-" is forbidden: error
      looking up service account dev/user-api-dev-datascientest-chart: serviceaccount
      "user-api-dev-datascientest-chart" not found'
    reason: FailedCreate
    status: "True"
    type: ReplicaFailure
  - lastTransitionTime: "2025-07-08T19:47:22Z"
    lastUpdateTime: "2025-07-08T19:47:22Z"
    message: Created new replica set "user-api-dev-datascientest-chart-968b9876"
    reason: NewReplicaSetCreated
    status: "True"
    type: Progressing
  observedGeneration: 2
  unavailableReplicas: 2
