kubernetes/exam/datascientest-chart/my-ingress-eval.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    meta.helm.sh/release-name: user-api-dev
    meta.helm.sh/release-namespace: dev
  creationTimestamp: "2025-07-08T16:33:13Z"
  generation: 1
  labels:
    app.kubernetes.io/managed-by: Helm
  name: user-api-dev-datascientest-chart
  namespace: dev
  resourceVersion: "51441"
  uid: ccfe2c30-0dca-4174-824c-95b3619fcf48
spec:
  ingressClassName: traefik
  rules:
  - host: dev.example.com
    http:
      paths:
      - backend:
          service:
            name: user-api-dev-datascientest-chart
            port:
              number: 8000
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 176.34.128.200
